--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,20 @@
 services:
   db:
-    image: postgres:16-alpine          # versión fija
-    container_name: datawarehouse      # nombre fijo
+    image: postgres:16-alpine
+    container_name: datawarehouse
     restart: unless-stopped
 
-    environment:                       # ← sólo estas claves leerán .env
+    environment:
       POSTGRES_USER:     ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB:       ${POSTGRES_DB}
       PGDATA:            /var/lib/postgresql/data/pgdata
 
     ports:
-      - "5432:5432"                    # puerto expuesto en el host
+      - "5432:5432"
 
     volumes:
-      - pg_data:/var/lib/postgresql/data  # volumen renombrado
+      - pg_data:/var/lib/postgresql/data
+      - ./datasets:/datasets:ro
 volumes:
   pg_data:
